feat: add about html

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/about.css">
   <script src="https://kit.fontawesome.com/1ada02b4f0.js" crossorigin="anonymous"></script>
-  <title>LEEHAR'S FASHION WEEK </title>
+  <title>About the tourism </title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     </div>
     <div class="main-navbar flex-center">
       <div class="logo">
-        <a href="#"><img src="./assets/logo.png" alt="fashion logo" /></a>
+        <a href="index.html"><img src="./assets/business-logo.jpg" alt="fashion logo" /></a>
       </div>
       <nav class="navbar">
         <div class="hamburger">
@@ -43,7 +43,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="#">Models</a></li>
           <li><a href="#">Tickets</a></li>
-          <li id="leehar-line-lg" class="flex-center"><a href="#">LEEHAR'S LINE</a></li>
+          <li id="leehar-line-lg" class="flex-center d-none d-block-lg"><a href="#">CC Campaign</a></li>
         </ul>
       </nav>
     </div>
@@ -52,28 +52,26 @@
     <div class="about-wrapper">
       <div class="about-section-header">
         <h1 class="about-info">
-          It's Leehar's fashion week🎉👙👗 where: Fashion is like eating, you shouldn't stick to the same menu😉👌
+          CREATIVE COMMONS GLOBAL SUMMIT 2015
         </h1>
       </div>
       <div class="about-text">
         <p>
-          A fashion show (French défilé de mode) is an event put on by a fashion designer to showcase their upcoming
-          line of clothing and/or accessories during Fashion Week. Fashion shows debut every season, particularly the
-          Spring/Summer and Fall/Winter seasons. This is where the latest fashion trends are made.
+          The Global Submit brings together the community of experts, academics and activities who comprise of creative commons affiliate network in a different country every two years. This year, we hope to expand our invitation list includes organisations and individuals.
         </p>
       </div>
 
       <div class="about-contact">
         <p>Kindly leave your comments, reviews and questions on our Email </p>
         <a href="#" class="about-adress">
-          leehar-line@fashionweek.co.uk
+          ccsummit2015@cckorea.org
         </a>
       </div>
     </div>
   </section>
   <section class="about-details">
     <div class="about-details-wrapper">
-      <h2 class="about-details-title"> "Leehar's Week 21' Creative Tailor Logo"</h2>
+      <h2 class="about-details-title"> "CC-CAMPAIGN's Week 21' Creative Summit Logo"</h2>
 
 
       <p>The logo was created with BrandCrowd's logo maker which has huge amount of templates you can customise within
@@ -81,37 +79,37 @@
     </div>
 
     <div class="about-details-img">
-      <img src="./assets/logo.png" alt=" Leehar ">
+      <img src="./assets/business-logo.jpg" alt=" business-logo ">
     </div>
   </section>
 
   <div class="about-plan-page">
     <div class="about-plan-page-wrapper">
       <h2>See our plans</h2>
-      <p>We are planning to help talented designer organize a fashion show in any part of the world</p>
+      <p>We are planning to help people organize a tourism center in any part of the world</p>
     </div>
   </div>
 
   <div class="about-images">
     <div class="about-images-img">
-      <div class="about-img-pic"><img src="./assets/next-1.jpg" alt=" milan"></div>
+      <div class="about-img-pic"><img src="./assets/tour-pic1.jpg" alt=" milan"></div>
       <div class="about-img-color"></div>
-      <div class="about-img-text">Plan for Milan</div>
+      <div class="about-img-text">Let's meet in Korea</div>
     </div>
     <div class="about-images-img">
-      <div class="about-img-pic"><img src="./assets/next-2.jpg" alt="Author"></div>
+      <div class="about-img-pic"><img src="./assets/tour-pic2.jpg" alt="Author"></div>
       <div class="about-img-color"></div>
-      <div class="about-img-text">A bigger plan for "PARIS"</div>
+      <div class="about-img-text">A bigger plan for "Tour"</div>
     </div>
   </div>
 
   <footer>
     <div class="footer-bottom">
       <div class="footer-bottom-img">
-        <img src="./assets/creative-tailor.png" alt="footer image" />
+        <img src="./assets/creative-tourism.png" alt="footer image" />
       </div>
       <div>
-        <p>&copy; 2021 Key. All Right Reserved | 🏗 by Harzeyzh Rotimi</p>
+        <p>&copy; 2021 Key. All Right Reserved | 🏗 by OyelakinG</p>
       </div>
     </div>
   </footer>
