feat: modify css and html in about page

--- a/about.html
+++ b/about.html
@@ -51,6 +51,7 @@
   <section class="about-section">
     <div class="about-wrapper">
       <div class="about-section-header">
+        <p class="about-message">"Hello! Sharing world"</p>
         <h1 class="about-info">
           CREATIVE COMMONS GLOBAL SUMMIT 2015
         </h1>
